--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^7.0.1",
     "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "style-loader": "^0.21.0",
     "superagent": "^2.2.0",
     "webpack": "^2.3.3",
