--- a/package.json
+++ b/package.json
@@ -29,15 +29,14 @@
   "license": "ISC",
   "devDependencies": {
     "enzyme": "^2.8.2",
-    "jest": "^21.2.1",
-    "nodemon": "^1.11.0",
-    "sqlite3": "^3.1.8",
-    "supertest": "^3.0.0",
-    "nock": "^9.2.5",
     "jest": "^23.4.1",
     "jsdom": "^11.0.0",
+    "nock": "^9.2.5",
+    "nodemon": "^1.11.0",
+    "react-test-renderer": "^15.5.4",
     "redux-mock-store": "^1.5.1",
-    "react-test-renderer": "^15.5.4"
+    "sqlite3": "^3.1.8",
+    "supertest": "^3.0.0"
   },
   "dependencies": {
     "babel-core": "^6.24.1",
@@ -62,19 +61,17 @@
     "node-sass": "^4.9.2",
     "passport": "^0.4.0",
     "pg": "^6.2.3",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "sass-loader": "^7.0.1",
+    "sass-loader": "^7.0.3",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
-    "redux-thunk": "^2.2.0",
-    "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "superagent": "^2.2.0",
-    "webpack": "^2.3.3",
+    "webpack": "^2.3.3"
   }
 }
