--- a/package.json
+++ b/package.json
@@ -6,24 +6,13 @@
   "main": "server/index.js",
   "scripts": {
     "postinstall": "webpack",
-    "dev": "nodemon --watch server & webpack --watch",
+    "dev": "concurrently \"nodemon --watch server\" \"webpack --watch\"",
     "start": "node server/index",
     "test": "jest",
-    "h:deploy": "git push heroku master",
-    "h:migrate": "heroku run knex migrate:latest",
-    "h:rollback": "heroku run knex migrate:rollback",
-    "h:seed": "heroku run knex seed:run",
-    "knex": "knex"
+    "webpack-init": "webpack --mode development"
   },
   "jest": {
     "collectCoverage": true
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "react",
-      "stage-0"
-    ]
   },
   "author": "EDA",
   "license": "ISC",
@@ -32,46 +21,42 @@
     "jest": "^23.4.1",
     "jsdom": "^11.0.0",
     "nock": "^9.2.5",
+    "node-gyp": "^7.1.0",
     "nodemon": "^1.11.0",
     "react-test-renderer": "^15.5.4",
     "redux-mock-store": "^1.5.1",
-    "sqlite3": "^3.1.8",
-    "supertest": "^3.0.0"
+    "style-loader": "^0.21.0",
+    "supertest": "^3.0.0",
+    "webpack-cli": "^4.0.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "bcrypt": "^1.0.3",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
     "body-parser": "^1.15.2",
-    "bulma": "^0.7.1",
+    "concurrently": "^5.3.0",
     "cors": "^2.8.3",
     "css-loader": "^1.0.0",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
-    "express-jwt": "^5.3.0",
     "font-awesome": "^4.7.0",
+    "html-webpack-plugin": "^4.5.0",
     "jsonwebtoken": "^7.4.3",
     "jsx-loader": "^0.13.2",
-    "jwt-decode": "^2.2.0",
     "knex": "^0.13.0",
-    "node-sass": "^4.9.2",
     "passport": "^0.4.0",
-    "pg": "^6.2.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-redux": "^5.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "sass-loader": "^7.0.3",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
     "style-loader": "^0.21.0",
     "superagent": "^2.2.0",
-    "webpack": "^2.3.3"
+    "webpack": "^5.0.0"
   }
 }
