--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "nodemon": "^1.11.0",
     "react-test-renderer": "^15.5.4",
     "redux-mock-store": "^1.5.1",
-    "style-loader": "^0.21.0",
-    "supertest": "^3.0.0",
-    "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^3.11.0"
+    "supertest": "^3.0.0"
   },
   "dependencies": {
+    "style-loader": "^0.21.0",
+    "webpack-cli": "^4.0.0",
+    "webpack-dev-server": "^3.11.0",
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
@@ -55,7 +55,6 @@
     "redux-thunk": "^2.2.0",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
-    "style-loader": "^0.21.0",
     "superagent": "^2.2.0",
     "webpack": "^5.0.0"
   }
